[package]
name = "inbox-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
teloxide = { version = "0.5.2", features = ["frunk", "macros", "auto-send"] }
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
