[package]
name = "inbox-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
hyper = { version = "0.14.13", features = ["full"] }
hyper-tls = "0.5.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
teloxide = { version = "0.5.2", features = ["frunk", "macros", "auto-send"] }
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }

[target.heroku]
version = "nightly"
